Lab3/LexAndYaccGPT/Assignment/23CS60R22_CL2_A3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSEDATA
    CLOSEDIV
    CLOSEROW
    CLOSESPAN
    CLOSESTYLE
    CLOSETABLE
    GARBAGE
    OPENDATA
    OPENDIV
    OPENROW
    OPENSPAN
    OPENSTYLE
    OPENTABLE

Grammar

Rule 0     S' -> start
Rule 1     start -> table
Rule 2     skiptag -> CONTENT skiptag
Rule 3     skiptag -> OPENHREF skiptag
Rule 4     skiptag -> CLOSEHREF skiptag
Rule 5     skiptag -> PTAGCLOSE skiptag
Rule 6     skiptag -> empty
Rule 7     handleheader -> OPENHEADER CONTENT CLOSEHEADER handleheader
Rule 8     handleheader -> empty
Rule 9     dataCell -> CONTENT dataCell
Rule 10    dataCell -> empty
Rule 11    handlerow -> PTAGOPEN dataCell PTAGCLOSE skiptag handlerow
Rule 12    handlerow -> empty
Rule 13    table -> BEGINTABLE skiptag handlerow ENDTABLE
Rule 14    empty -> <empty>
Rule 15    content -> CONTENT
Rule 16    content -> empty

Terminals, with rules where they appear

BEGINTABLE           : 13
CLOSEDATA            : 
CLOSEDIV             : 
CLOSEHEADER          : 7
CLOSEHREF            : 4
CLOSEROW             : 
CLOSESPAN            : 
CLOSESTYLE           : 
CLOSETABLE           : 
CONTENT              : 2 7 9 15
ENDTABLE             : 13
GARBAGE              : 
OPENDATA             : 
OPENDIV              : 
OPENHEADER           : 7
OPENHREF             : 3
OPENROW              : 
OPENSPAN             : 
OPENSTYLE            : 
OPENTABLE            : 
PTAGCLOSE            : 5 11
PTAGOPEN             : 11
error                : 

Nonterminals, with rules where they appear

content              : 
dataCell             : 9 11
empty                : 6 8 10 12 16
handleheader         : 7
handlerow            : 11 13
skiptag              : 2 3 4 5 11 13
start                : 0
table                : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . table
    (13) table -> . BEGINTABLE skiptag handlerow ENDTABLE

    BEGINTABLE      shift and go to state 3

    start                          shift and go to state 1
    table                          shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> table .

    $end            reduce using rule 1 (start -> table .)


state 3

    (13) table -> BEGINTABLE . skiptag handlerow ENDTABLE
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . PTAGCLOSE skiptag
    (6) skiptag -> . empty
    (14) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    PTAGCLOSE       shift and go to state 8
    PTAGOPEN        reduce using rule 14 (empty -> .)
    ENDTABLE        reduce using rule 14 (empty -> .)

    skiptag                        shift and go to state 4
    empty                          shift and go to state 9

state 4

    (13) table -> BEGINTABLE skiptag . handlerow ENDTABLE
    (11) handlerow -> . PTAGOPEN dataCell PTAGCLOSE skiptag handlerow
    (12) handlerow -> . empty
    (14) empty -> .

    PTAGOPEN        shift and go to state 11
    ENDTABLE        reduce using rule 14 (empty -> .)

    handlerow                      shift and go to state 10
    empty                          shift and go to state 12

state 5

    (2) skiptag -> CONTENT . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . PTAGCLOSE skiptag
    (6) skiptag -> . empty
    (14) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    PTAGCLOSE       shift and go to state 8
    PTAGOPEN        reduce using rule 14 (empty -> .)
    ENDTABLE        reduce using rule 14 (empty -> .)

    skiptag                        shift and go to state 13
    empty                          shift and go to state 9

state 6

    (3) skiptag -> OPENHREF . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . PTAGCLOSE skiptag
    (6) skiptag -> . empty
    (14) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    PTAGCLOSE       shift and go to state 8
    PTAGOPEN        reduce using rule 14 (empty -> .)
    ENDTABLE        reduce using rule 14 (empty -> .)

    skiptag                        shift and go to state 14
    empty                          shift and go to state 9

state 7

    (4) skiptag -> CLOSEHREF . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . PTAGCLOSE skiptag
    (6) skiptag -> . empty
    (14) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    PTAGCLOSE       shift and go to state 8
    PTAGOPEN        reduce using rule 14 (empty -> .)
    ENDTABLE        reduce using rule 14 (empty -> .)

    skiptag                        shift and go to state 15
    empty                          shift and go to state 9

state 8

    (5) skiptag -> PTAGCLOSE . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . PTAGCLOSE skiptag
    (6) skiptag -> . empty
    (14) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    PTAGCLOSE       shift and go to state 8
    PTAGOPEN        reduce using rule 14 (empty -> .)
    ENDTABLE        reduce using rule 14 (empty -> .)

    skiptag                        shift and go to state 16
    empty                          shift and go to state 9

state 9

    (6) skiptag -> empty .

    PTAGOPEN        reduce using rule 6 (skiptag -> empty .)
    ENDTABLE        reduce using rule 6 (skiptag -> empty .)


state 10

    (13) table -> BEGINTABLE skiptag handlerow . ENDTABLE

    ENDTABLE        shift and go to state 17


state 11

    (11) handlerow -> PTAGOPEN . dataCell PTAGCLOSE skiptag handlerow
    (9) dataCell -> . CONTENT dataCell
    (10) dataCell -> . empty
    (14) empty -> .

    CONTENT         shift and go to state 19
    PTAGCLOSE       reduce using rule 14 (empty -> .)

    dataCell                       shift and go to state 18
    empty                          shift and go to state 20

state 12

    (12) handlerow -> empty .

    ENDTABLE        reduce using rule 12 (handlerow -> empty .)


state 13

    (2) skiptag -> CONTENT skiptag .

    PTAGOPEN        reduce using rule 2 (skiptag -> CONTENT skiptag .)
    ENDTABLE        reduce using rule 2 (skiptag -> CONTENT skiptag .)


state 14

    (3) skiptag -> OPENHREF skiptag .

    PTAGOPEN        reduce using rule 3 (skiptag -> OPENHREF skiptag .)
    ENDTABLE        reduce using rule 3 (skiptag -> OPENHREF skiptag .)


state 15

    (4) skiptag -> CLOSEHREF skiptag .

    PTAGOPEN        reduce using rule 4 (skiptag -> CLOSEHREF skiptag .)
    ENDTABLE        reduce using rule 4 (skiptag -> CLOSEHREF skiptag .)


state 16

    (5) skiptag -> PTAGCLOSE skiptag .

    PTAGOPEN        reduce using rule 5 (skiptag -> PTAGCLOSE skiptag .)
    ENDTABLE        reduce using rule 5 (skiptag -> PTAGCLOSE skiptag .)


state 17

    (13) table -> BEGINTABLE skiptag handlerow ENDTABLE .

    $end            reduce using rule 13 (table -> BEGINTABLE skiptag handlerow ENDTABLE .)


state 18

    (11) handlerow -> PTAGOPEN dataCell . PTAGCLOSE skiptag handlerow

    PTAGCLOSE       shift and go to state 21


state 19

    (9) dataCell -> CONTENT . dataCell
    (9) dataCell -> . CONTENT dataCell
    (10) dataCell -> . empty
    (14) empty -> .

    CONTENT         shift and go to state 19
    PTAGCLOSE       reduce using rule 14 (empty -> .)

    dataCell                       shift and go to state 22
    empty                          shift and go to state 20

state 20

    (10) dataCell -> empty .

    PTAGCLOSE       reduce using rule 10 (dataCell -> empty .)


state 21

    (11) handlerow -> PTAGOPEN dataCell PTAGCLOSE . skiptag handlerow
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . PTAGCLOSE skiptag
    (6) skiptag -> . empty
    (14) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    PTAGCLOSE       shift and go to state 8
    PTAGOPEN        reduce using rule 14 (empty -> .)
    ENDTABLE        reduce using rule 14 (empty -> .)

    skiptag                        shift and go to state 23
    empty                          shift and go to state 9

state 22

    (9) dataCell -> CONTENT dataCell .

    PTAGCLOSE       reduce using rule 9 (dataCell -> CONTENT dataCell .)


state 23

    (11) handlerow -> PTAGOPEN dataCell PTAGCLOSE skiptag . handlerow
    (11) handlerow -> . PTAGOPEN dataCell PTAGCLOSE skiptag handlerow
    (12) handlerow -> . empty
    (14) empty -> .

    PTAGOPEN        shift and go to state 11
    ENDTABLE        reduce using rule 14 (empty -> .)

    handlerow                      shift and go to state 24
    empty                          shift and go to state 12

state 24

    (11) handlerow -> PTAGOPEN dataCell PTAGCLOSE skiptag handlerow .

    ENDTABLE        reduce using rule 11 (handlerow -> PTAGOPEN dataCell PTAGCLOSE skiptag handlerow .)

